manifests/07-service-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-service
  namespace: llm-app
  labels:
    app: open-webui
spec:
  type: NodePort
  selector:
    app: open-webui
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
